feat: criado core do sistema
