# routes/api.php
@@ -1,5 +1,10 @@
 <?php
 
+use App\Http\Controllers\{
+    AgendaController,
+    EspecialidadeController,
+    MedicoController
+};
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,3 +22,7 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+Route::apiResource('/medico', MedicoController::class);
+Route::apiResource('/agenda', AgendaController::class);
+Route::apiResource('/especialidade', EspecialidadeController::class);
